# gtm-research-engine

./: LICENSE  README.md
backend/: README.md  pyproject.toml  test_toast_api.py
backend/app/: __init__.py  server.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  circuit_breaker.py  config.py  metrics.py
backend/app/db/: __init__.py  redis_cache.py
backend/app/decorators/: __init__.py  api_rate_limiter.py
backend/app/models/: __init__.py  request.py  response.py  search.py
backend/app/services/: __init__.py  enhanced_streaming_aggregator.py  extractor.py  pipeline.py  query_generation.py  streaming_aggregator.py
backend/app/sources/: __init__.py  base.py  google_search.py  jobs_search.py  news_search.py
backend/app/streaming/: __init__.py  sse_formatter.py  stream_generator.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.tsx  theme.ts
frontend/src/components/Header/: Header.tsx
frontend/src/components/ResearchResults/: ResearchResults.tsx  index.tsx
frontend/src/components/SearchInterface/: SearchControls.tsx  SearchForm.tsx  SettingsMenu.tsx  index.tsx
frontend/src/hooks/: useSearch.ts  useSettings.ts
frontend/src/types/: index.ts  search.ts  settings.ts
